src/test/deca/context/invalid/provided/testprintfloat.deca
//Resultats :
//Erreur contextuelle
//Ligne 5: Right value doesn't match the expected type
{int x = 2;
int y = readFloat();
println(y);
}

/*  Commentaire  */
